# bse-ts-public

./: .gitignore  README.md  final_project.ipynb  final_project.py  pyproject.toml  slides.html
exercises/: 01_resource_planning.py  02_bayes_capital.py  03_world_co2.py  04_retail_pulse.py  05_medistor_procurement.py
exercises/data/: 01_grid_load.csv  02_bayes_product.csv  03_world_co2.csv  04_retail_pulse.csv  05_medistor_procurement.csv
forecasting/: modelling.py  optimization.py  viz.py
tests/: test_same_month_rolling_educational.py
