[tool.poetry]
name = "time_series"
version = "0.1.0"
description = "Time series forecasting class at BSE"
authors = ["Javier Mas Adell <javier.mas93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9, <3.12"
nbformat = "5.4.0"
sktime = "^0.30.0"
scikit-learn = "^1.2.2"
pmdarima = "^2.0.3"
mlflow = "^2.11.3"
ipykernel = "^6.29.4"
xgboost = "^2.1.4"
ortools = "^9.12.4544"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
