[project]
name = "forecasting"
version = "0.1.0"
description = "Time series forecasting class at BSE"
authors = ["Javier Mas Adell <javier.mas93@gmail.com>"]
requires-python = ">=3.12, <3.13"
dependencies = [
    "nbformat==5.4.0",
    "sktime>=0.30.0,<0.31.0",
    "scikit-learn>=1.2.2,<2.0",
    "pmdarima>=2.0.3,<3.0",
    "mlflow>=2.11.3,<3.0",
    "ipykernel>=6.29.4,<7.0",
    "xgboost>=2.1.4,<3.0",
    "ortools>=9.12.4544,<10.0",
    "pandas>=2.2.3,<3.0",
    "seaborn>=0.13.2,<0.14",
    "plotly>=6.0.1,<7.0",
]
